--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "cinewiz",
   "version": "0.1.0",
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest",
+      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest",
+      "^.+\\.css$": "jest-transform-css"
+    }
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -10,7 +18,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.21",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
@@ -26,7 +33,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,6 +56,11 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.21.4",
+    "@types/jest": "^29.5.0",
+    "css-loader": "^6.7.3",
+    "jest": "^29.5.0",
+    "jest-css-modules": "^2.1.0",
+    "jest-transform-css": "^6.0.1",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "ts-jest": "^29.1.0"
