--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "cinewiz",
   "version": "0.1.0",
   "jest": {
-    "testEnvironment": "jsdom",
+    "testEnvironment": "node",
     "transform": {
       "^.+\\.tsx?$": "ts-jest",
       "^.+\\.(js|jsx|ts|tsx)$": "babel-jest",
+      "^.+\\.html$": "html-loader-jest",
       "^.+\\.css$": "jest-transform-css"
     }
   },
@@ -15,8 +16,6 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.18.21",
     "@types/react": "^18.0.29",
@@ -24,15 +23,13 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --config webpack.config.js",
     "test": "jest",
     "eject": "react-scripts eject"
   },
@@ -55,14 +52,38 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
+    "@jest/globals": "^29.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__react": "^10.2.0",
+    "@types/webpack-env": "^1.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "html-loader": "^4.2.0",
+    "html-loader-jest": "^0.2.1",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
     "jest-css-modules": "^2.1.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-transform-css": "^6.0.1",
+    "jsdom": "^21.1.1",
+    "mini-css-extract-plugin": "^2.7.5",
+    "react-bootstrap": "^2.7.2",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
-    "ts-jest": "^29.1.0"
+    "style-loader": "^3.3.2",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.2",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1"
   }
 }
