--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.todo.txt
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-todo.txt
