--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "jsdom": "^21.1.1",
     "mini-css-extract-plugin": "^2.7.5",
     "react-bootstrap": "^2.7.2",
+    "react-error-boundary": "^4.0.3",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "style-loader": "^3.3.2",
